--- a/layouts/partials/head/scripts.html
+++ b/layouts/partials/head/scripts.html
@@ -25,12 +25,12 @@
 
 <!-- Google tag (gtag.js) -->
 {{ if .Site.Config.Services.GoogleAnalytics.ID }}
-<script async src="https://www.googletagmanager.com/gtag/js?id={{ .Site.Params.Analytics }}"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id={{ .Site.Config.Services.GoogleAnalytics.ID }}"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-	gtag('config', '{{ .Site.Params.Analytics }}');
+	gtag('config', '{{ .Site.Config.Services.GoogleAnalytics.ID }}');
 </script>
 {{end}}
