Center align images

--- a/layouts/shortcodes/image.html
+++ b/layouts/shortcodes/image.html
@@ -1,8 +1,8 @@
 <!-- image with description -->
 <img
-		style="margin-bottom: .5em"
-		src="{{ .Get "src" }}"
-		alt="{{ .Get "alt" }}"
+	style="margin-bottom: .5em;"
+	src="{{ .Get "src" }}"
+	alt="{{ .Get "alt" }}"
 />
 <center style="font-size: 0.8em; margin-top: 0; margin-bottom: 1.5em;">
 	{{- .Inner | markdownify -}}
