--- a/layouts/partials/sidebar/mobile-header.html
+++ b/layouts/partials/sidebar/mobile-header.html
@@ -15,7 +15,29 @@
 						</a>
 				{{ end }}
 			</div>
-			{{ partial "sidebar/menu.html" . }}
+			<nav>
+				<ul class="sidebar-nav">
+					{{ $sections := .Site.Sections.ByTitle }}
+					{{ $taxonomies := .Site.Taxonomies }}
+					{{ range .Site.Params.menu }}
+					{{ $menu_item := . }}
+						{{ range $sections }}
+							{{ if eq (lower .Title) (lower (strings.TrimSuffix "/" (strings.TrimPrefix "/" $menu_item.URL))) }}
+								<li class="heading heading-mobile">
+									<a href="{{$menu_item.URL }}">{{ $menu_item.Name }}</a>
+								</li>
+							{{ end }}
+						{{ end }}
+						{{ range $name, $taxonomy := $taxonomies }}
+							{{ if eq (lower $name) (lower $menu_item.Name) }}
+								<li class="heading">
+									<a href="{{$menu_item.URL }}">{{ $menu_item.Name }}</a>
+								</li>
+							{{ end }}
+						{{ end }}
+					{{ end }}
+				</ul>
+			</nav>
 		</div>
   </div>
 </aside>
