Reformat bird-photography to use layout
This should make adding new content easier and, if I want to spend the
time, straight-forward to automate

--- a/layouts/gallery/section.html
+++ b/layouts/gallery/section.html
@@ -1,11 +1,4 @@
----
-title: "Bird Photography"
-featuredImage: "/projects/bird-photography/white-ibis/20230407-3-banner.jpg"
-summary: " "
-draft: false
----
-
-{{< rawhtml >}}
+{{ define "main" -}}
 <script type="module">
 	import PhotoSwipeLightbox from '/js/photoswipe-lightbox.esm.min.js';
 	import PhotoSwipeDynamicCaption from '/js/photoswipe-dynamic-caption-plugin.esm.min.js';
@@ -64,32 +57,30 @@ draft: false
 	}
 </script>
 <link rel="stylesheet" href="/css/photoswipe.css" />
-<link rel="stylesheet" href="/css/photoswipe-dynamic-caption-plugin.css">
+<link rel="stylesheet" href="/css/photoswipe-dynamic-caption-plugin.css" />
 
 <div id="bird-gallery--cropped-thumbs" class="pswp-gallery">
-{{% lightbox src="red-bellied-woodpecker/20230406-1.jpg" width="3039" height="2897" %}}
-	A red-bellied woodpecker clutching the bottom of a large branch
-	<br/> f/6.3, 1/400, 300mm, iso200
-{{% /lightbox %}}
-
-{{% lightbox src="yellow-crowned-night-heron/20230407-2.jpg" width="6000" height="4000" %}}
-	A yellow-crowned night heron perched on a lichen-encrusted tree branch
-	<br/> f/6.3, 1/125, 300mm, iso800
-{{% /lightbox %}}
-
-{{% lightbox src="cuban-grassquit/20230425-6.jpg" width="2688" height="3525" %}}
-	A cuban grassquit atop a short branch, looking into the camera
-	<br/> f/6.3, 1/640, 300mm, iso400
-{{% /lightbox %}}
-
-{{% lightbox src="tricolored-heron/20230407-2.jpg" width="4536" height="3345" %}}
-	A tricolored heron standing on the roots of a mangrove tree
-	<br/> f/4.8, 1/400, 100mm, iso800
-{{% /lightbox %}}
-
-{{% lightbox src="osprey/20230413-2.jpg" width="6000" height="4000" %}}
-	An osprey soaring against a cloudy background
-	<br/> f/16, 1/500, 210mm, iso400
-{{% /lightbox %}}
+	{{ partial "post/info.html" . }}
+		{{ range .Paginator.Pages.ByWeight }}
+			<a
+				class="pswp-gallery__item"
+				href="{{ .Params.image }}"
+				data-pswp-width="{{ .Params.width }}"
+				data-pswp-height="{{ .Params.height }}"
+				data-cropped="true"
+				target="_blank"
+			>
+				<img
+					class="lightbox"
+					src="{{- delimit (split .Params.image ".") "-thumb." -}}"
+					alt="{{ .Params.description }}"
+				/>
+				<div class="lightbox-badge">
+					{{- title (delimit (split (index (split .Params.image "/") 0) "-") " ") -}}
+				</div>
+			</a>
+			<span class="pswp-caption-content">{{ .Params.description }}</span>
+		{{ end }}
+	{{ partial "post/navigation.html" . }}
 </div>
-{{< /rawhtml >}}
+{{- end }}
