--- a/layouts/projects/projects.html
+++ b/layouts/projects/projects.html
@@ -4,16 +4,16 @@
 {{ end }}
 <h1 class="title">{{ .Title }}</h1>
 <div class="posts">
-    {{ range .Paginator.Pages }}
-        <div class="project">
-            <a href="{{ .RelPermalink }}">{{ .Title }}</a>
-            <p>
-                {{ if .Params.featuredImage }}
-									<a href="{{ .RelPermalink }}"><img src="{{ .Params.featuredImage }}"></a><br>
-                {{ end }}
-                {{ .Summary }}
-            </p>
-        </div>
-    {{ end }}
+  {{ range (.Paginate .Pages).Pages }}
+    <div class="project">
+      <a href="{{ .RelPermalink }}">{{ .Title }}</a>
+      <p>
+        {{ if .Params.featuredImage }}
+          <a href="{{ .RelPermalink }}"><img src="{{ .Params.featuredImage }}"></a><br>
+        {{ end }}
+        {{ .Summary }}
+      </p>
+    </div>
+  {{ end }}
 </div>
 {{ end }}
