Add pagination to bird-photography

--- a/layouts/partials/pagination.html
+++ b/layouts/partials/pagination.html
@@ -1,4 +1,4 @@
-{{ $pag := .Paginate (where .Pages "Type" "articles") }}
+{{ $pag := .Paginate .Pages }}
 {{ if gt $pag.TotalPages 1 }}
 <hr>
 <div class="footer">
