--- a/layouts/gallery/section.html
+++ b/layouts/gallery/section.html
@@ -3,7 +3,7 @@
 	import PhotoSwipeLightbox from '/js/photoswipe-lightbox.esm.min.js';
 	import PhotoSwipeDynamicCaption from '/js/photoswipe-dynamic-caption-plugin.esm.min.js';
 	const lightbox = new PhotoSwipeLightbox({
-	  gallery: '#bird-gallery--cropped-thumbs',
+	  gallery: '#bird-gallery',
 	  childSelector: '.pswp-gallery__item',
 	  escKey: true,
 	  arrowKeys: true,
@@ -59,7 +59,7 @@
 <link rel="stylesheet" href="/css/photoswipe.css" />
 <link rel="stylesheet" href="/css/photoswipe-dynamic-caption-plugin.css" />
 
-<div id="bird-gallery--cropped-thumbs" class="pswp-gallery">
+<div id="bird-gallery" class="pswp-gallery">
 	{{ partial "post/info.html" . }}
 		{{ range (.Paginator 10).Pages.ByWeight }}
 			<a
